--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -62,7 +62,7 @@ body{
     text-decoration: underline 2px solid;
 }
  .contGaleria{   
-    height:100%;
+    height:90%;
     margin: 3rem;
     margin-top: 0%;
     margin-bottom: 2%;
@@ -73,7 +73,7 @@ body{
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 2%;
     grid-row-gap: 2%;
-    width: 95%;
+    width: 90%;
     margin-bottom: 5%;
 }
 .galeria img{
@@ -85,7 +85,7 @@ body{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas: "embarazo recienNacido paisajismo""institucional deportiva gastronomica";
-    width: 90%;
+    width: 85%;
     text-align: center;
     font-size: 20px;
     line-height: 1.5em; 
@@ -111,25 +111,25 @@ body{
 }
 .info p{
     margin: 2rem;
-
     text-align: left;
 }
 
+
 .imagFondo{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    height:100%;
+    width: 90%;
     margin: 3rem;
 }
-
+.fotoFondo{
+    display: flex;  
+    flex-direction: row;
+    justify-content:space-between;    
+    width: 90%;
+}
 .imagFondo img{
-    width: 450px;
-    margin: 2% auto;   
+    width: 450px; 
+    padding: 1%;     
 }
-.imagFondo img:hover{
-    transform: scale(1.4);
-    transition: 2s all;
-}
+
 
 .redes{
 display: flex;
@@ -138,6 +138,7 @@ flex-wrap: nowrap;
 padding: 20px;
 justify-content: center;
 align-items: center ;
+width: 90%;
 }
 
 .redes i{
@@ -179,6 +180,10 @@ select, input, option{
     padding: 5%;  
 }
 @media only screen and (max-width: 600px){
+    body {
+        width: auto;
+        padding: 0%;
+    }
     .encabezado{
         display: flex;
         align-items: center;
@@ -211,8 +216,7 @@ select, input, option{
         margin-top: 2%;
     }
     .contGaleria{   
-        height:95%;
-        margin: 1rem;
+        height:95%;       
         margin-top: 0%;
         margin-bottom: 0%;
     }
@@ -220,7 +224,7 @@ select, input, option{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 85%;
+        width: 100%;
         margin-bottom: 5%;
     }
     .info{
@@ -232,7 +236,7 @@ select, input, option{
         text-align: justify;
         font-size: 15px;
         line-height: 1.5em; 
-        margin: 0 auto;
+        margin: 3rem;
     }
     .info p{
         margin: 1rem;
@@ -240,24 +244,27 @@ select, input, option{
         
     }
     .imagFondo{
-        display:flex;
+        width: 90%;
+          
+    }
+    .fotoFondo{
+        display: flex;
         flex-direction: column;
-        width: 85%;
+        width: 90%;
         justify-content: center;
-        flex-wrap: nowrap;     
-     }
-    .imagFondo img{
-        width: 200px;
-        margin: 0 auto;
-    }           
+        align-items: center;   
+    }
+    .fotoFondo img{
+        width: 350px;
+    }
 
     .redes{
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;        
-        justify-content: center;
-        align-items: center ;
+        justify-content: center;       
         width: 90%;
+        margin: 1rem;
         }
         
     .redes i{
@@ -266,13 +273,13 @@ select, input, option{
         
     .redes span, .redes p{
             padding: 7px;
+        
         }
 }
-
-@media only screen and (min-width: 600px){
-    
+@media only screen and (min-width: 600px) { 
     
 }
+     
 @media only screen and (max-width: 780px){
    
 }
