--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -74,7 +74,7 @@ body{
     grid-column-gap: 2%;
     grid-row-gap: 2%;
     width: 90%;
-    margin-bottom: 5%;
+    margin: 0 auto 4% auto;
 }
 .galeria img{
     width: 100%;
@@ -85,7 +85,7 @@ body{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas: "embarazo recienNacido paisajismo""institucional deportiva gastronomica";
-    width: 85%;
+    width: 90%;
     text-align: center;
     font-size: 20px;
     line-height: 1.5em; 
@@ -117,13 +117,14 @@ body{
 
 .imagFondo{
     width: 90%;
-    margin: 3rem;
+    margin: 2% auto;
 }
 .fotoFondo{
     display: flex;  
     flex-direction: row;
     justify-content:space-between;    
     width: 90%;
+    margin:0 auto;
 }
 .imagFondo img{
     width: 450px; 
