--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -12,7 +12,7 @@
     text-decoration: none;  
     box-sizing: border-box; 
 }
-
+/* Encabezados */
 h2{
     text-align: center;
     margin: 10px;
@@ -29,11 +29,19 @@ h3{
     opacity: 50%; /*LE BAJE LA OPACIDAD PARA QUE NO RESALTE TANTO Y NO COMPITA CON EL H2*/
 }
 
+
 body{
     width: auto;
     padding:1%;
     background-image: linear-gradient(to bottom, #e3c8c1, #caaba3,#885c5b);
     min-height: 940px; /*AGREGUE ESTO PARA SOLUCIONAR EL RECTANGULO DE ABAJO, COMO MINIMO MIDE LO QUE MIDE EL ALTO DE LA PANTALLA*/
+}
+/*  Nav */
+
+#navbarNav {
+    background-color: #e4c9c4;
+    margin-right: -2%;
+    padding-right: 3%;
 }
 
 .imgLogo{   
@@ -57,34 +65,34 @@ body{
     padding-right: 5%;
     float: right
 }
-.menuham{
-    width: 100%;    
-}
-
-
-#navbarNav {
-    background-color: #e4c9c4;
-    margin-right: -2%;
-    padding-right: 3%;
-}
 .navbar-light .navbar-nav .nav-link{
     color:#ffff;
     float: right;
     padding-right: 5%;
-   }
+}
 .navbar-expand-lg .navbar-collapse{
-       flex-direction: row-reverse;
-       border: none;
-   }
+    flex-direction: row-reverse;
+    border: none;
+}
 .navbar-light .navbar-toggler {
+    font-size: 12px;;
     color: transparent;
     border-color: transparent;
     width: 10%;/*CAMBIE DE 8% A 10% PORQUE ERA MUY CHICO EN ALGUNOS CASOS*/
     min-width: 40px;/*AGREGUE ESTO PARA QUE EN PANTALLA CHICA NO DESAPAREZCA DE LO CHICO QUE SE HACE*/
     max-width: 75px;/*PARA QUE NO QUEDE EXESIVAMENTE GRANDE*/
-   }
+}
    /*AL MENU HAMBURGUESA EN LOS HTML LO CAMBIE POR UN DIV EN LUGAR DE SPAN PORQUE CON RESPONSIVE TE ROMPIA POR UNA MEDIA QUERY DONDE 
    MODIFICABAS EL TAMAÑO DEL TEXTO Y ESO AL SPAN LO AFECTA*/
+.navbar-light .navbar-toggler-icon{
+    color: #ffff;
+}
+.menuham{
+    width: 100%;
+}
+
+/* Galeria*/
+
 .contGaleria{   
     height:90%;
     margin: 3rem;
@@ -103,7 +111,10 @@ body{
 .galeria img{
     width: 100%;
     height: 100%;   
-} 
+}
+
+/* Especialidades*/ 
+
 .info{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -141,6 +152,9 @@ body{
     width: 90%;
     margin: 2% auto;
 }
+
+/* imagenes pie de pagina*/
+
 .fotoFondo{
     display: flex;  
     flex-direction: row;
@@ -153,18 +167,19 @@ body{
 .imagFondo img{
     width: 33%; 
     padding: 1%;
-    margin: 0 auto;   
+    margin: 2% auto;   
 }   
 
+/* Footer */
 
 .redes{
-display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-padding: 20px;
-justify-content: center;
-align-items: center ;
-width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding: 20px;
+    justify-content: center;
+    align-items: center ;
+    width: 100%;
 }
 
 .redes i{
@@ -194,14 +209,24 @@ select, input, option{
     border-collapse: collapse; 
     position: relative;
     padding: 1%;
-}    
+}     
 
-/*Pagina de Contacto*/
-    
+/*Pagi na de Contacto*/
+.btn-contacto{ 
+    padding: 2% 0;
+}
+      
+/* Pagina de Galeria */
+.carousel{
+    padding: 2%;
+}
+.d-block{      
+    margin: 0 auto;
+}
 
 
 @media only screen and (max-width: 600px){
-      h2{
+    h2{
         font-size: 15px;
         height: 100%;
         width: 90%;
@@ -240,8 +265,7 @@ select, input, option{
         display: flex;
         flex-direction: column ;
         width: 80%;
-        text-align: justify;
-        
+        text-align: justify;        
         line-height: 1.5em; 
         margin: 3rem;
     }
@@ -272,60 +296,31 @@ select, input, option{
         justify-content: center;       
         width: 90%;
         margin: 1rem;
-        }
+    }
         
     .redes i{
             padding: 5px;   
-        }
+    }
         
     .redes span, .redes p{
             padding: 7px;
         
-        }  
+    }  
     .table{/*agregue*/
         font-size: 9px;
     };        
 }
 @media only screen and (min-width: 600px) and (max-width: 780px) { 
-   
-    .galeria img{
-        padding: 2%;
-    }
-    .encabezado{
-        display: flex;
-        align-items: center;
-        background-color: #e3c8c1;
-        justify-content: space-between;
-        margin: 0 -1%; 
-        margin-bottom: 5%;
-        padding: 2%;  
-        width: 90%;
-    }
-       
-    header label{
-        display: block;
-    }  
-    .encabezadoNav ul{
-        flex-direction: column;
-    }
-    h2{
-    }
-    h3{
-        width: 90%;
-        text-align: center;
-        margin-top: 2%;
-    }
-    .contGaleria{   
-        height:95%;       
-        margin-top: 0%;
-        margin-bottom: 0%;
-    }
+               
     .galeria{
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 100%;
         margin-bottom: 5%;
+    }
+    .galeria img{
+        padding: 2%;
     }
     .info{
         display: grid;
@@ -341,7 +336,6 @@ select, input, option{
     .info p{
         margin: 1rem;
         text-align: justify;
-        
     }
     .imagFondo{
         width: 90%;
@@ -357,41 +351,10 @@ select, input, option{
     .fotoFondo img{
         width: 85%;
     }
-
-    .redes{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;        
-        justify-content: center;       
-        width: 90%;
-        margin: 1rem;
-        }
-        
-    .redes i{
-            padding: 5px;   
-        }
-        
-    .redes span, .redes p{
-            padding: 7px;
-        
-        }
     
 }
      
-@media only screen and (min-width: 780px) and (max-width: 992px){
-    h2{
-        display: flex;
-        height: 100%;
-        width: 90%;
-        justify-content: center;
-        text-transform: uppercase;
-        margin-top: 5%;
-    }
-    h3{
-        width: 90%;
-        text-align: center;
-        margin-top: 2%;
-    }
+@media only screen and (min-width: 780px){
     .info{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -405,61 +368,19 @@ select, input, option{
     }
     .info p{
         margin: 1rem;
-        text-align: justify;}
-    .fotoFondo img{
-        width: 33%;}
-    
-   
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1200px){
-    h2{
-        display: flex;
-        height: 100%;
-        width: 90%;
-        justify-content: center;
-        text-transform: uppercase;
-        margin-top: 5%;
-    }
-    h3{
-        width: 90%;
-        text-align: center;
-        margin-top: 2%;
-    }
-    .info{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-areas: "embarazo recienNacido" "paisajismo institucional" "deportiva gastronomica";
-        width: 90%;
         text-align: justify;
-        font-size: 15px;
-        line-height: 1.5em; 
-        margin: 3rem;
     }
-    .info p{
-        margin: 1rem;
-        text-align: justify;}
+      
     .fotoFondo img{
-        width: 33%;}
+        width: 33%;
+    }
+}
 
-    .imagFondo img:hover{
-        transform: scale(1.4);
-        transition: all 2s;
+@media only screen and (min-width: 992px) {
+ 
+   .imagFondo img:hover{
+        transform: scale(1.2);
+        transition: all 1s;
     }
 }
-@media only screen and (min-width: 1200px){  
-    .fotoFondo img{
-        width: 33%;}                     
-    .imagFondo img:hover{
-        transform: scale(1.4);
-        transition: all 2s;
-    }
-}
-.carousel{
-    padding: 2%;
-}
-.d-block{      
-    margin: 0 auto;
-}
-.navbar-light .navbar-toggler-icon{ color: #ffff;}
+
