--- a/Scss/estiloScss.scss
+++ b/Scss/estiloScss.scss
@@ -1,3 +1,4 @@
+@import "_variables.scss";
 *{
     margin: 0%;
     padding: 0%;
@@ -29,7 +30,8 @@ h3{
 
 body{
     width: auto;
-    background-image: linear-gradient(to bottom, #e3c8c1, #caaba3,#885c5b);    
+    background-image: linear-gradient(to bottom, #e3c8c1, #caaba3,#885c5b);
+    min-height: 960px;    
 }
 /*  Nav */
 
@@ -103,14 +105,13 @@ body{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas: "embarazo recienNacido paisajismo""institucional deportiva gastronomica";
-    width: 90%;
+    width: 85%;
     text-align: center;
     font-size: 20px;
     line-height: 1.5em; 
     margin: 0 auto;
-    p{
-        margin: 2rem;
-        text-align: left;
+    p{ margin: 2rem;
+      text-align: left;
     }
 }
 .embarazo{
@@ -145,20 +146,20 @@ body{
     
 }
 /*Mixin*/
-@mixin disp {
-    display: $flex;  
-    flex-direction: $fila;
-    width: $ancho;
+@mixin uno($flex,$fila,$ancho){
+   display: $flex;
+   flex-direction: $fila;
+   width: $ancho;
 }
 .fotoFondo{
-   @include disp(flex,row,100%);
+    @include uno(flex,row,90% );
     justify-content:space-between;    
     margin:0 auto;
-} 
+}
 /* Footer */
 
 .redes{
-    @include disp(flex,row,100%);
+   @include uno(flex,row, 100%);
     flex-wrap: nowrap;
     padding: 20px;
     justify-content: center;
@@ -167,7 +168,7 @@ body{
  i{
     padding: 10px;   
 }
-span,  p{
+span{
     padding: 15px;
 }
 p{
@@ -224,8 +225,9 @@ td{
         width: 90%;
         text-align: center;
         margin-top: 2%;
+        font-size: 16px; 
     }
-    form, h3{
+    form{
         font-size: 16px;  
     }
     p{
@@ -243,9 +245,9 @@ td{
         width: 100%;
         justify-content: center;        
         margin-bottom: 5%;
-    }
-    .galeria img{
+    img{
         padding: 2%;
+    }
     }
     .info{
         display: flex;
@@ -254,12 +256,12 @@ td{
         text-align: justify;        
         line-height: 1.5em; 
       
-    }
-    .info p{
+    p{
         margin: 1rem;
         text-align: justify;
         
     }
+    }   
     .imagFondo{
         width: 90%;
           
@@ -269,12 +271,11 @@ td{
         flex-direction: column;
         width: 90%;
         justify-content: center;
-        align-items: center;   
+        align-items: center;
+        img{
+            width: 80%;
+        }   
     }
-    .fotoFondo img{
-        width: 80%;
-    }
-
     .redes{
         display: flex;
         flex-direction: row;
@@ -282,16 +283,20 @@ td{
         justify-content: center;       
         width: 90%;
         margin: 1rem;
-    }
+    
         
-    .redes i{
+    i{
         padding: 5px;   
     }
         
-    .redes span, .redes p{
+     span{
         padding: 7px;
         
-    }  
+    } 
+    p{
+         padding: 7px;        
+    } 
+} 
     .table{
         font-size: 9px;
     }
@@ -321,27 +326,25 @@ td{
         font-size: 15px;
         line-height: 1.5em; 
         margin: 3rem;
-    }
-    .info p{
+        p{
         margin: 1rem;
         text-align: justify;
     }
+}
     .imagFondo{
         width: 90%;
-          
+        img{
+            width: 85%;
+        }
+               
     }
     .fotoFondo{
         display: flex;
         flex-direction: column;
-        width: 90%;
-        justify-content: center;
+        width: 95%;
+        justify-content: space-between;
         align-items: center;   
     }
-    .fotoFondo img{
-        width: 85%;
-    }
-    
-
 }
      
 @media only screen and (min-width: 780px) and (max-width: 992px){
@@ -355,17 +358,13 @@ td{
         font-size: 15px;
         line-height: 1.5em; 
         margin: 3rem;
-    }
-    .info p{
+    
+    p{
         margin: 1rem;
         text-align: justify;
     }
-      
-    .fotoFondo img{
-        width: 33%;
-    }
 }
-
+}
 @media only screen and (min-width: 992px) {
  
    .imagFondo img:hover{
