--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -13,6 +13,11 @@
   box-sizing: border-box; }
 
 /* Encabezados */
+h1 {
+  margin: 0 auto;
+  text-align: center;
+  text-transform: capitalize; }
+
 h2 {
   text-align: center;
   text-transform: uppercase;
@@ -25,9 +30,9 @@ h3 {
   opacity: 50%; }
 
 body {
-  width: auto;
   background-image: linear-gradient(to bottom, #e3c8c1, #caaba3, #885c5b);
-  min-height: 940px; }
+  background-attachment: fixed;
+  background-size: cover; }
 
 /*  Nav */
 .imgLogo {
@@ -84,8 +89,9 @@ body {
   grid-column-gap: 2%;
   grid-row-gap: 2%;
   width: 90%;
-  margin: 10% auto 4% auto; }
+  margin: 4% auto 4% auto; }
   .galeria img {
+    border-radius: 2%;
     width: 100%;
     height: 100%; }
 
@@ -129,7 +135,8 @@ body {
   .imagFondo img {
     width: 33%;
     padding: 1%;
-    margin: 2% auto; }
+    margin: 2% auto;
+    border-radius: 7%; }
 
 /*Mixin*/
 .fotoFondo {
@@ -162,7 +169,7 @@ body {
 /*Pagina de Precios*/
 .tabla, th, td {
   text-align: center;
-  border: 3px solid;
+  border: 1px solid;
   border-collapse: collapse;
   position: relative;
   padding: 1%; }
@@ -177,6 +184,8 @@ body {
 /* Pagina de Galeria */
 .carousel {
   padding: 2%; }
+  .carousel img {
+    border-radius: 2%; }
 
 .d-block {
   margin: 0 auto; }
@@ -213,6 +222,7 @@ body {
     justify-content: center;
     margin-bottom: 5%; }
     .galeria img {
+      border-radius: 7%;
       padding: 2%; }
   .info {
     display: flex;
@@ -224,6 +234,7 @@ body {
       margin: 1rem;
       text-align: justify; }
   .imagFondo {
+    border-radius: 7%;
     width: 90%; }
   .fotoFondo {
     display: flex;
@@ -259,6 +270,7 @@ body {
     width: 100%;
     margin-bottom: 5%; }
     .galeria img {
+      border-radius: 7%;
       padding: 2%; }
   .info {
     display: grid;
@@ -276,6 +288,7 @@ body {
   .imagFondo {
     width: 90%; }
     .imagFondo img {
+      border-radius: 7%;
       width: 85%; }
   .fotoFondo {
     display: flex;
