--- a/Scss/estiloScss.scss
+++ b/Scss/estiloScss.scss
@@ -14,6 +14,11 @@
     box-sizing: border-box; 
 }
 /* Encabezados */
+h1{
+    margin: 0 auto;
+    text-align: center;    
+    text-transform:capitalize;
+}
 h2{
     text-align: center;   
     text-transform: uppercase;
@@ -29,10 +34,10 @@ h3{
 
 
 body{
-    width: auto;
+    
     background-image: linear-gradient(to bottom, #e3c8c1, #caaba3,#885c5b);
-    background-repeat: no-repeat;
-    //min-height: 940px;    
+    background-attachment: fixed;
+    background-size: cover;
 }
 /*  Nav */
 
@@ -92,8 +97,9 @@ body{
     grid-column-gap: 2%;
     grid-row-gap: 2%;
     width: $ancho;
-    margin: 10% auto 4% auto;
+    margin: 4% auto 4% auto;
  img{
+     border-radius: 2%;
     width: 100%;
     height: 100%;   
 }
@@ -139,10 +145,13 @@ body{
 .imagFondo{
     width: 90%;
     margin: 2% auto;
+    
+
     img{
         width: 33%; 
         padding: 1%;
-        margin: 2% auto;   
+        margin: 2% auto;
+        border-radius: 7%; 
     }   
     
 }
@@ -183,13 +192,14 @@ p{
 }
 
 /*Pagina de Precios*/
+
 .tabla{    
     text-align: center;
-    border: 3px solid ;
+    border: 1px solid ;
     border-collapse: collapse; 
     position: relative;
     padding: 1%;
-    
+       
 } 
 th{
     @extend.tabla;
@@ -208,6 +218,7 @@ td{
 /* Pagina de Galeria */
 .carousel{
     padding: 2%;
+    img{border-radius: 2%;}
 }
 .d-block{      
     margin: 0 auto;
@@ -250,6 +261,7 @@ td{
         justify-content: center;        
         margin-bottom: 5%;
     img{
+        border-radius: 7%;
         padding: 2%;
     }
     }
@@ -267,6 +279,7 @@ td{
     }
     }   
     .imagFondo{
+        border-radius: 7%;
         width: 90%;
           
     }
@@ -302,7 +315,7 @@ td{
     } 
 } 
     .table{
-        font-size: 9px;
+         font-size: 9px;
     }
     .form-control{
         width: 100%;
@@ -317,6 +330,7 @@ td{
         width: 100%;
         margin-bottom: 5%;
     img{
+        border-radius: 7%;
         padding: 2%;
     }
 }
@@ -337,7 +351,8 @@ td{
 }
     .imagFondo{
         width: 90%;
-        img{
+        img{ 
+            border-radius: 7%;
             width: 85%;
         }
                
@@ -349,6 +364,7 @@ td{
         justify-content: space-between;
         align-items: center;   
     }
+  
 }
      
 @media only screen and (min-width: 780px) and (max-width: 992px){
@@ -368,6 +384,7 @@ td{
         text-align: justify;
     }
 }
+
 }
 @media only screen and (min-width: 992px) {
  
