--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -179,8 +179,8 @@ body {
   margin: 0 auto; }
 
 /* Pagina de Galeria */
-.fluid2 {
-  margin: 2% 8%; }
+.conteNosotros {
+  margin: 2% 4%; }
 
 @media only screen and (max-width: 600px) {
   h2 {
